# model_interpretability_project

./: README.md  pyproject.toml
project1/: global_xai.ipynb  local_xai.ipynb  modelling.ipynb
project1/data/: test_data.csv
